--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="blue_200">#809fc6</color>
+    <color name="blue_200">#005fa6</color>
     <color name="blue_500">#003e8d</color>
     <color name="blue_700">#001e6d</color>
+    <color name="lightgrey">#D3D3D3</color>
 </resources>
