--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,7 +54,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/Button_Add"
-        android:layout_marginBottom="30dp" />
+        android:layout_marginBottom="60dp" />
 
     <Button
         android:id="@+id/Button_Add"
@@ -64,13 +64,14 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toLeftOf="@id/Button_Remove"
-        android:layout_marginBottom="30dp" />
+        android:layout_marginBottom="60dp" />
 
 
     <androidx.constraintlayout.widget.Group
         android:id="@+id/place_designation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:constraint_referenced_ids="Button_Add,Range_Setting,Button_Remove" />
+        app:constraint_referenced_ids="Button_Add,Range_Setting,Button_Remove"
+        android:visibility="gone"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
